--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,48 @@
-.App {
-  text-align: center;
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+@import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@300&family=Pacifico&display=swap');
+
+
+body::before {
+  content: '';
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-image: url('path/background.jpg');
+  background-size: cover;
+  filter:blur(4px) ;
+  z-index: -1;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+body {
+  background-color: #e5d1df;
+  font-family: 'Comfortaa', sans-serif;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+h1 {
+  font-family: 'Pacifico', sans-serif;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.TaskListContainer {
+  filter:blur(3px);
+  z-index: -1; 
 }
 
-.App-link {
-  color: #61dafb;
+.letter1,
+.letter2 {
+  transition: all 0.1s ease-in-out;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.letter1:hover,
+.letter2:hover {
+  text-shadow: 0 0 15px rgba(0, 0, 0, 0.5);
+}
+
+.TaskListContainer{
+  transition: all 2.2s ease-in-out;
+  filter: blur(3px);
+  z-index: -1;
 }
